--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,22 +1,30 @@
 <header class="site-header">
 	<div class="container header-inner">
-		<a class="brand" href="/" aria-label="Klinik Bidan Elmozza - Beranda">
-			Klinik Bidan Elmozza
+		<a class="brand" href="/" aria-label="Klinik El'Mozza - Bidan Dhora Yufita, SST, MKM - Beranda">
+			<img
+				class="brand-logo"
+				src="https://files.elmozza.net/Elmozza.jpg"
+				alt="Logo Klinik El'Mozza"
+				loading="eager"
+				decoding="async"
+			/>
+			<span class="sr-only">Klinik El'Mozza</span>
 		</a>
 
 		<nav aria-label="Navigasi utama">
 			<ul class="nav-list">
 				<li><a href="#layanan">Layanan</a></li>
+				<li><a href="#kegiatan">Kegiatan</a></li>
 				<li><a href="#jadwal">Jadwal</a></li>
-				<li><a href="#testimoni">Testimoni</a></li>
+				<li><a href="#ulasan">Ulasan</a></li>
 				<li><a href="#lokasi">Lokasi</a></li>
 			</ul>
 		</nav>
 
 		<a
 			class="header-contact"
-			href="tel:+6281234567890"
-			aria-label="Hubungi Klinik Bidan Elmozza melalui telepon"
+			href="tel:+628111712718"
+			aria-label="Hubungi Klinik El'Mozza melalui telepon"
 		>
 			Hubungi Kami
 		</a>
