--- a/src/components/sections/Location.astro
+++ b/src/components/sections/Location.astro
@@ -3,27 +3,29 @@
 		<article>
 			<header class="section-heading section-heading-left">
 				<p class="eyebrow">Lokasi Klinik</p>
-				<h2 id="location-title">Mudah Dijangkau dari Pusat Kota</h2>
+				<h2 id="location-title">Klinik El'Mozza - Bidan Dhora Yufita, SST, MKM</h2>
 			</header>
 			<address>
-				Jl. Kesehatan Ibu No. 24<br />
-				Kecamatan Sehat, Kota Harmoni 40123
+				Jl. K.H.M. Usman No.88, RT.06/RW.04, Kukusan,<br />
+				Kecamatan Beji, Kota Depok, Jawa Barat 16425
 			</address>
 			<ul class="contact-list">
 				<li>
 					Telepon:
-					<a href="tel:+6281234567890" aria-label="Hubungi melalui telepon">
-						+62 812-3456-7890
+					<a href="tel:+628111712718" aria-label="Hubungi melalui telepon">
+						0811-1712-718
 					</a>
 				</li>
 				<li>
-					Email:
-					<a href="mailto:halo@klinikelmozza.com">halo@klinikelmozza.com</a>
+					WhatsApp:
+					<a href="https://wa.me/628111712718" target="_blank" rel="noopener noreferrer">
+						0811-1712-718
+					</a>
 				</li>
 				<li>
 					Peta:
 					<a
-						href="https://maps.google.com/?q=klinik+bidan"
+						href="https://maps.google.com/?q=Jl.+K.H.M.+Usman+No.88,+Kukusan,+Beji,+Depok"
 						target="_blank"
 						rel="noopener noreferrer"
 						aria-label="Buka peta lokasi di Google Maps"
@@ -34,11 +36,19 @@
 			</ul>
 		</article>
 
-		<aside class="location-note" aria-label="Informasi akses lokasi">
-			<h3>Akses Cepat</h3>
+		<aside class="location-note" aria-labelledby="location-map-title">
+			<h3 id="location-map-title">Lokasi di Google Maps</h3>
+			<iframe
+				class="location-map"
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.2252253579795!2d106.81257177499161!3d-6.364891393625226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69eea0dee7463d%3A0x7e33b669682235e7!2sKlinik%20El&#39;Mozza%20-%20Bidan%20Dhora%20Yufita%2CSST%2CMKM!5e0!3m2!1sid!2sid!4v1771479275465!5m2!1sid!2sid"
+				allowfullscreen=""
+				loading="lazy"
+				referrerpolicy="no-referrer-when-downgrade"
+				title="Peta Klinik El'Mozza - Bidan Dhora Yufita, SST, MKM"
+			></iframe>
 			<p>
-				Klinik berada di jalur utama kota, dekat halte bus dan area parkir umum. Jika ingin
-				konsultasi di jam sibuk, kami sarankan reservasi terlebih dahulu.
+				Provinsi: Jawa Barat. Untuk menghindari antrean, disarankan menghubungi nomor klinik
+				terlebih dahulu sebelum berkunjung.
 			</p>
 		</aside>
 	</div>
