--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,22 +4,25 @@ import Header from "../components/layout/Header.astro";
 import Footer from "../components/layout/Footer.astro";
 import Hero from "../components/sections/Hero.astro";
 import Services from "../components/sections/Services.astro";
+import Activities from "../components/sections/Activities.astro";
 import Schedule from "../components/sections/Schedule.astro";
-import Testimonials from "../components/sections/Testimonials.astro";
+import GoogleReviews from "../components/sections/GoogleReviews.astro";
 import Location from "../components/sections/Location.astro";
 import CTA from "../components/sections/CTA.astro";
 ---
 
 <BaseLayout
-	title="Klinik Bidan Elmozza | Pendampingan Kehamilan dan Persalinan"
-	description="Klinik Bidan Elmozza menyediakan layanan kebidanan, pemeriksaan kehamilan, konsultasi laktasi, dan pendampingan persalinan dengan pendekatan hangat dan profesional."
+	title="Klinik El'Mozza - Bidan Dhora Yufita, SST, MKM | Depok"
+	description="Klinik El'Mozza - Bidan Dhora Yufita, SST, MKM di Depok, Jawa Barat. Layanan kebidanan dengan jam operasional setiap hari pukul 07.30-21.00."
+	image="https://files.elmozza.net/Elmozza.jpg"
 >
 	<Header />
 	<main id="main-content">
+		<Activities />
 		<Hero />
 		<Services />
 		<Schedule />
-		<Testimonials />
+		<GoogleReviews />
 		<Location />
 		<CTA />
 	</main>
