--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -13,11 +13,12 @@
 
 		<nav aria-label="Navigasi utama">
 			<ul class="nav-list">
-				<li><a href="#layanan">Layanan</a></li>
-				<li><a href="#kegiatan">Kegiatan</a></li>
-				<li><a href="#jadwal">Jadwal</a></li>
-				<li><a href="#ulasan">Ulasan</a></li>
-				<li><a href="#lokasi">Lokasi</a></li>
+				<li><a href="/">Beranda</a></li>
+				<li><a href="/layanan">Layanan</a></li>
+				<li><a href="/jadwal-praktik">Jadwal</a></li>
+				<li><a href="/ulasan-google">Ulasan</a></li>
+				<li><a href="/lokasi-kontak">Lokasi</a></li>
+				<li><a href="/faq">FAQ</a></li>
 			</ul>
 		</nav>
 
