--- a/src/components/sections/Location.astro
+++ b/src/components/sections/Location.astro
@@ -38,14 +38,23 @@
 
 		<aside class="location-note" aria-labelledby="location-map-title">
 			<h3 id="location-map-title">Lokasi di Google Maps</h3>
-			<iframe
-				class="location-map"
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.2252253579795!2d106.81257177499161!3d-6.364891393625226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69eea0dee7463d%3A0x7e33b669682235e7!2sKlinik%20El&#39;Mozza%20-%20Bidan%20Dhora%20Yufita%2CSST%2CMKM!5e0!3m2!1sid!2sid!4v1771479275465!5m2!1sid!2sid"
-				allowfullscreen=""
-				loading="lazy"
-				referrerpolicy="no-referrer-when-downgrade"
-				title="Peta Klinik El'Mozza - Bidan Dhora Yufita, SST, MKM"
-			></iframe>
+			<div class="location-map-stack">
+				<iframe
+					class="location-map"
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.2252253579795!2d106.81257177499161!3d-6.364891393625226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69eea0dee7463d%3A0x7e33b669682235e7!2sKlinik%20El&#39;Mozza%20-%20Bidan%20Dhora%20Yufita%2CSST%2CMKM!5e0!3m2!1sid!2sid!4v1771479275465!5m2!1sid!2sid"
+					allowfullscreen=""
+					loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade"
+					title="Peta Klinik El'Mozza - Bidan Dhora Yufita, SST, MKM di Google Maps"
+				></iframe>
+				<iframe
+					class="location-map"
+					src="https://embed.waze.com/iframe?zoom=17&lat=-6.365000&lon=106.812719&ct=livemap"
+					allowfullscreen=""
+					loading="lazy"
+					title="Peta Klinik El'Mozza - Bidan Dhora Yufita, SST, MKM di Waze"
+				></iframe>
+			</div>
 			<p>
 				Provinsi: Jawa Barat. Untuk menghindari antrean, disarankan menghubungi nomor klinik
 				terlebih dahulu sebelum berkunjung.
