chore: update location guidance text for maps search

--- a/src/components/sections/Location.astro
+++ b/src/components/sections/Location.astro
@@ -56,8 +56,7 @@
 				></iframe>
 			</div>
 			<p>
-				Provinsi: Jawa Barat. Untuk menghindari antrean, disarankan menghubungi nomor klinik
-				terlebih dahulu sebelum berkunjung.
+				Ketikan klinik elmozza di waze atau google map untuk menemukan lokasi klinik kami.
 			</p>
 		</aside>
 	</div>
